[workspace]
resolver = "3"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "22.8.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
